-------
 * parkedmusicclass can now be set for non-default parking lots.

Asterisk Manager Interface
--------------------------
 * PeerStatus now includes Address and Port.
 * Added Hold events for when the remote party puts the call on and off hold
   for chan_dahdi ISDN channels.
 * Added new action MeetmeListRooms to list active conferences (shows same
   data as "meetme list" at the CLI).

Asterisk HTTP Server
--------------------------
 * The HTTP Server can bind to IPv6 addresses.

chan_dahdi
--------------------------
 * Busy tone patterns featuring 2 silence and 2 tone lengths can now be used
   with busydetect.  usage example: busypattern=200,200,200,600

CLI Changes
--------------------------
 * New 'gtalk show settings' command showing the current settings loaded from
   gtalk.conf.
 * The 'logger reload' command now supports an optional argument, specifying an
   alternate configuration file to use.
 * 'dialplan add extension' command will now automatically create a context if
   the specified context does not exist with a message indicated it did so.

CDR
--------------------------
 * The filter option in cdr_adaptive_odbc now supports negating the argument,
   thus allowing records which do NOT match the specified filter.

CODECS
--------------------------
 * Ability to define custom SILK formats in codecs.conf.
 * Addition of speex32 audio format with translation.

Dialplan Variables
------------------
 * Added ASTETCDIR, ASTMODDIR, ASTVARLIBDIR, ASTDBDIR, ASTKEYDIR, ASTDATADIR,
   ASTAGIDIR, ASTSPOOLDIR, ASTRUNDIR, ASTLOGDIR which hold the equivalent
   variables from asterisk.conf.

Dialplan Functions
------------------
 * Added DB_KEYS, which lists the next set of keys in the Asterisk database
   hierarchy.

libpri channel driver (chan_dahdi) DAHDI changes
--------------------------
 * Added moh_signaling option to specify what to do when the channel's bridged
   peer puts the ISDN channel on hold.